--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -25,5 +25,10 @@ jobs:
     - name: Copy .env.example to .env
       run: cp ./integration-testing/.env.example ./integration-testing/.env
 
-    - name: Run integration script
-      run: cd integration-testing && npm run test:integration
+    - name: Make all scripts executable
+      run: chmod +x scripts/*
+      working-directory: integration-testing
+
+    - name: Run integration tests
+      run: npm run test:integration
+      working-directory: integration-testing
