--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -16,14 +16,24 @@ jobs:
     - name: Checkout code
       uses: actions/checkout@v2
 
-    - name: Set up Docker Buildx
+    - name: Set up Docker
       uses: docker/setup-buildx-action@v2
 
     - name: Set up Docker Compose
-      uses: docker/setup-qemu-action@v2
+      run: sudo apt-get update && sudo apt-get install -y docker-compose
+
+    - name: Set up Node.js
+      uses: actions/setup-node@v3
+      with:
+        node-version: 20
+
+    - name: Install dependencies
+      run: npm install
+      working-directory: integration-testing
 
     - name: Copy .env.example to .env
-      run: cp ./integration-testing/.env.example ./integration-testing/.env
+      run: cp .env.example .env
+      working-directory: integration-testing
 
     - name: Make all scripts executable
       run: chmod +x scripts/*
